--- a/style.css
+++ b/style.css
@@ -2,9 +2,17 @@
   display: grid;
   gap: 5px;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 200px);
+  grid-template-rows: repeat(6, 150px);
 }
 img{
   width: 100%;
   height: 100%;
+}
+.big-layout{
+  grid-row: span 2;
+  grid-column: span 6;
+}
+.normal-layout{
+  grid-row: span 2;
+  grid-column: span 2;
 }
