--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ img{
   grid-row: span 2;
   grid-column: span 2;
 }
+.wide-layout{
+  grid-column: span 2;
+  grid-row: span 1;
+}
+.small-layout{
+  grid-row: span 1;
+  grid-column: span 1;
+}
